coq_translation/examples-from-rust-book/traits/traits.err
error[E0658]: type ascription is experimental
  --> examples-from-rust-book/traits/traits.rs:70:21
   |
70 |     let mut dolly = Animal::new("Dolly"): Sheep;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information
   = help: add `#![feature(type_ascription)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
